# openbrij

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
brij/: __init__.py  cli.py  config.py
brij/connectors/: __init__.py  base.py  csv_local.py  google_drive.py  google_sheets.py
brij/core/: __init__.py  models.py  store.py  worker.py
brij/mcp/: __init__.py  responses.py  server.py  tools.py
brij/search/: __init__.py  ann_index.py  embeddings.py  engine.py
tests/: test_cli.py  test_config.py  test_integration_cross_source_search.py  test_integration_csv_full_loop.py
tests/connectors/: test_base.py  test_csv_local.py  test_google_drive.py  test_google_sheets.py
tests/core/: test_incremental_sync.py  test_models.py  test_store.py  test_store_embeddings.py  test_store_fts.py  test_worker.py
tests/mcp/: test_tools.py  test_write.py
tests/search/: test_ann_index.py  test_embeddings.py  test_engine.py  test_hybrid.py
workflow/context/: coding-standards.md  prd.md  project-charter.md  tech-stack.md
