[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brij"
version = "0.1.0"
description = "Personal data connectivity layer for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24",
    "sentence-transformers>=2.2",
    "mcp>=1.0",
    "click>=8.0",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "pdfplumber>=0.9",
]

[project.scripts]
brij = "brij.cli:main"

[project.optional-dependencies]
ann = [
    "faiss-cpu>=1.7",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["brij*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
